--- a/problem/p877_石子游戏.md
+++ b/problem/p877_石子游戏.md
@@ -43,10 +43,10 @@ https://leetcode-cn.com/problems/stone-game/
 如果第一次做这种类型的题目，还是会觉得蛮复杂的。
 
 ### 三维DP
-- dp[i][j][0]表示区间[i,j]之间先手最多能得到的石子数量
+- dp[i][j][0]表示区间[i,j]之间先手最多能得到的石子数量（始终保存最优解）
 - dp[i][j][1]表示区间[i,j]之间后手最多能得到的石子数量
 
-- 两种选择可能：
+- 先手两种选择可能，要么选择剩下的最左一堆leftChoice、或者最右一堆rightChoice：
 $$
 \begin{cases}
 leftChoice = dp[i+1][j] + piles[i] \\\\
@@ -54,14 +54,14 @@ rightChoice = dp[i][j-1] + piles[j] \\\\
 \end{cases}
 $$
 
-- 先手优先选最大：
+- 而且先手优先选最大：
 $$
 \begin{cases}
-dp[i][j][0] = max(leftChoice, rightChoice) \\\\
+dp[i][j][0] = max(leftChoice, rightChoice) \\
 \end{cases}
 $$
 
-- 后手的选择受先手影响：
+- 后手的选择受先手影响，只能选剩下的最优
 
 $$
 \begin{cases}
@@ -71,11 +71,14 @@ dp[i][j][1] = dp[i][j-1][0] \ (leftChoice <= rightChoice) \\\\
 $$
 
 总结下就是，先手先选最优，后手选剩下的最优：
-- 先手选择leftChoice，剩下piples[i+1 .. j]，后手选剩下最优，也就是dp[i+1][j][0]
-- 先手选择rightChoice, 剩下piles[i..j-1]，后手选剩下最优，也就是dp[i][j-1][0]
+- 先手选择leftChoice，剩下piples[i+1 .. j]，后手选剩下最优解，也就是dp[i+1][j][0]
+- 先手选择rightChoice, 剩下piles[i..j-1]，后手选剩下最优解，也就是dp[i][j-1][0]
 
-得到代码：
+思考下上述方程的边界条件，比如
+- 当i=0,j=0,那么dp[i][j-1][0..1] == dp[0][-1][0..1] == 0；
+- 令n = piles.length ，当i=n-1，j=n-1，那么dp[i+1][j] = dp[n][n-1][0] == 0.
 
+为了避免越界，可以将i和j同时放大1，于是得到以下实现：
 
 ```java
     public boolean stoneGameSimple(int[] piles) {
@@ -104,6 +107,21 @@ $$
 ```
 
 ### 二维DP
+想象所有的石子都属于先手，后手所取的石子都作为先手的损失，那么这个游戏的策略可以更新为让先手取到的石子尽量多，而让后手所取到的石子尽量少；而且要从先手所取的石子中扣减后手所取的石子；直到游戏结束后，先手还剩下石子数如果大于0则赢得游戏，否则输掉游戏（不可能平因为石子总数为奇数）。
+
+令dp[i][j]为先手拥有的石子数。则有方程：
+
+$$
+\begin{cases}
+order = (j - i) \% 2 == 0 \\\\
+dp[i][j] = max(dp[i+1][j]+piles[i], dp[i][j-1] + piles[j]) (order == 0) \\\\
+dp[i][j] = min(dp[i+1][j]-piles[i], dp[i][j-1]-piples[j]) (order == 1) \\\\
+\end{cases}
+$$
+
+order为0表示现在轮到先手取石子；order为1表示现在轮到后手先取石子。
+
+为了避免边界问题，将i和j放大1，得到如下实现：
 
 ```java
     public boolean stoneGame(int[] piles) {
