--- a/problem/p1140_石子游戏2.md
+++ b/problem/p1140_石子游戏2.md
@@ -116,3 +116,4 @@ dp的思路参考的是[动态规划 清晰易懂17行 演示](https://leetcode-
 
 - [p877_石子游戏](../problem/p877_石子游戏.md)
 - [p1140_石子游戏2](../problem/p1140_石子游戏2.md)
+- [p1406_石子游戏3](../problem/p1406_石子游戏3.md)
