--- a/problem/p1406_石子游戏3.md
+++ b/problem/p1406_石子游戏3.md
@@ -106,31 +106,34 @@ $$
     private int[] memo;
 
     private int dfs(int[] stoneValues, int index) {
+        // 超出搜索范围，返回0
         if (index >= stoneValues.length) {
             return 0;
         }
-
+        // 记忆化数组有搜索记录，直接返回
         if (memo[index] != Integer.MIN_VALUE) {
             return memo[index];
         }
 
         int max = Integer.MIN_VALUE;
         int step = 1;
+        // 当前选手有三种选择，逐个选择深度搜索并记录最优解
         while (step <= 3) {
             max = Integer.max(max, stoneValues[index] - dfs(stoneValues, index + step));
             step++;
         }
-
+        // 记忆化之
         memo[index] = max;
 
         return max;
     }
 
     public String stoneGameIII(int[] stoneValue) {
+        // 倒序累积石子总数，方便后续快速计算石子片段和
         for (int i = stoneValue.length - 2; 0 <= i; i--) {
             stoneValue[i] += stoneValue[i + 1];
         }
-
+        // 由于石子数可为负数，这里需要将记忆化数组初始化无穷小
         this.memo = new int[stoneValue.length];
         for (int i = 0; i < memo.length; i++) {
             memo[i] = Integer.MIN_VALUE;
@@ -154,3 +157,4 @@ $$
 - [p877_石子游戏](../problem/p877_石子游戏.md)
 - [p1140_石子游戏2](../problem/p1140_石子游戏2.md)
 - [p1406_石子游戏3](../problem/p1406_石子游戏3.md)
+- [p1510_石子游戏4](../problem/p1510_石子游戏4.md)
