--- a/problem/p1510_石子游戏4.md
+++ b/problem/p1510_石子游戏4.md
@@ -91,11 +91,7 @@ $$
             }
         }
 
-        if (dp[0]) {
-            return true;
-        } else {
-            return false;
-        }
+        return dp[0];
     }
 ```
 
