--- a/problem/p21_合并两个有序链表.md
+++ b/problem/p21_合并两个有序链表.md
@@ -1,4 +1,4 @@
-# 题目名字，例如p111-单词拆分
+# p21_合并两个有序链表
 ## 题目来源
 https://leetcode-cn.com/problems/merge-two-sorted-lists/
 ## 题目描述
@@ -51,5 +51,36 @@ https://leetcode-cn.com/problems/merge-two-sorted-lists/
         // 头节点去掉初始化节点
         head.next
     }
+```
+
+用java又做了一遍：
+
+```java
+public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+    ListNode head = new ListNode();
+    ListNode current = head;
+    while (l1 != null && l2 != null) {
+        if (l1.val < l2.val) {
+            current.next = l1;
+            l1 = l1.next;
+        } else {
+            current.next = l2;
+            l2 = l2.next;
+        }
+        current = current.next;
+    }
+
+    if (l1 == null && l2 != null) {
+        current.next = l2;
+    }
+
+    if (l1 != null && l2 == null) {
+        current.next = l1;
+    }
+
+    return head.next;
+
+}
+
 ```
 ## 其他补充
