--- a/problem/p18_四数之和.md
+++ b/problem/p18_四数之和.md
@@ -39,50 +39,48 @@
 与三数之和的思路一模一样
 
 ```java
-public List<List<Integer>> fourSum(int[] nums, int target) {
-    if (nums.length < 4) {
-        return Collections.emptyList();
-    }
-
-    Arrays.sort(nums);
-
-    List<List<Integer>> result = new ArrayList<>();
-
-    int len = nums.length;
-    for (int first = 0; first < len; first++) {
-        if (first > 0 && nums[first] == nums[first - 1]) {
-            continue;
+    public List<List<Integer>> fourSum(int[] nums, int target) {
+        if (nums == null || nums.length < 4) {
+            return Collections.emptyList();
         }
 
-        for (int second = first + 1; second < len; second++) {
-            if (second > first + 1 && nums[second] == nums[second - 1]) {
+        Arrays.sort(nums);
+
+        List<List<Integer>> result = new ArrayList<>();
+
+        for (int firstIndex = 0; firstIndex < nums.length; firstIndex++) {
+            if (firstIndex > 0 && nums[firstIndex - 1] == nums[firstIndex]) {
                 continue;
             }
 
-            int forth = len - 1;
-            int remain = target - nums[first] - nums[second];
-            for (int third = second + 1; third < len; third++) {
-                if (third > second + 1 && nums[third] == nums[third - 1]) {
+            for (int secondIndex = firstIndex + 1; secondIndex < nums.length; secondIndex++) {
+                if (secondIndex > firstIndex + 1 && nums[secondIndex - 1] == nums[secondIndex]) {
                     continue;
                 }
 
-                while (forth > third && nums[third] + nums[forth] > remain) {
-                    forth--;
-                }
+                int forthIndex = nums.length - 1;
+                for (int thirdIndex = secondIndex + 1; thirdIndex < nums.length; thirdIndex++) {
+                    if (thirdIndex > secondIndex + 1 && nums[thirdIndex - 1] == nums[thirdIndex]) {
+                        continue;
+                    }
 
-                if (third == forth) {
-                    break;
-                }
+                    while (forthIndex > thirdIndex && nums[firstIndex] + nums[secondIndex] + nums[thirdIndex] + nums[forthIndex] > target) {
+                        forthIndex--;
+                    }
 
-                if (nums[third] + nums[forth] == remain) {
-                    result.add(Arrays.asList(nums[first], nums[second], nums[third], nums[forth]));
+                    if (forthIndex == thirdIndex) {
+                        break;
+                    }
+
+                    if (nums[firstIndex] + nums[secondIndex] + nums[thirdIndex] + nums[forthIndex] == target) {
+                        result.add(Arrays.asList(nums[firstIndex], nums[secondIndex], nums[thirdIndex], nums[forthIndex]));
+                    }
                 }
             }
         }
-    }
-    return result;
-}
 
+        return result;
+    }
 ```
 
 ## 其他补充
