--- a/problem/p110_平衡二叉树.md
+++ b/problem/p110_平衡二叉树.md
@@ -39,6 +39,11 @@
  树中的节点数在范围 [0, 5000] 内 
  -104 <= Node.val <= 104 
  ```
+
+
+
+
+
 ## 题目难度
 > ★★★
 ## 核心知识
@@ -82,18 +87,20 @@ private int dfs(TreeNode root) {
         return 0;
     }
 
-    int left = dfs(root.left);
-    int right = dfs(root.right);
+    int leftHeight;
+    int rightHeight;
 
-    if (left < 0 || right < 0 || Math.abs(left - right) > 1) {
+    if ((leftHeight = dfs(root.left)) == -1 ||
+            (rightHeight = dfs(root.right)) == -1 ||
+            Math.abs(leftHeight - rightHeight) > 1) {
         return -1;
     }
 
-    return Integer.max(left, right) + 1;
+    return Integer.max(leftHeight, rightHeight) + 1;
 }
 
 public boolean isBalanced(TreeNode root) {
-    return dfs(root) >= 0;
+    return dfs(root) != -1;
 }
 ```
 每个节点最多遍历一遍，时间复杂度为O(n)。
