--- a/problem/p123_买卖股票的最佳时机3.md
+++ b/problem/p123_买卖股票的最佳时机3.md
@@ -1,4 +1,4 @@
-# p123-买卖股票的最佳时机 III
+# p123_买卖股票的最佳时机3
 ## 题目难度
 困难
 ## 题目来源
@@ -173,9 +173,9 @@ $$
 
 ## 其他补充
 股票买卖类型题目：
-- [p121-买卖股票的最佳时机](../problem/p121-best-time-to-buy-and-sell-stock.md)
-- [p122--买卖股票的最佳时机 II](../problem/p122-best-time-to-buy-and-sell-stock-ii.md)
-- [p123-买卖股票的最佳时机 III](../problem/p123-best-time-to-buy-and-sell-stock-iii.md)
-- [p188-买卖股票的最佳时机 IV](../problem/p188-best-time-to-buy-and-sell-stock-iv.md)
-- [p714-买卖股票的最佳时机含手续费](../problem/p714-best-time-to-buy-and-sell-stock-with-transaction-fee.md)
-- [p309-最佳买卖股票时机含冷冻期](../problem/p309_best-time-to-buy-and-sell-stock-with-cooldown.md)
+- [p121-买卖股票的最佳时机](../problem/p121_买卖股票的最佳时机.md)
+- [p122--买卖股票的最佳时机 II](../problem/p122_买卖股票的最佳时机2.md)
+- [p123-买卖股票的最佳时机 III](../problem/p123_买卖股票的最佳时机3.md)
+- [p188-买卖股票的最佳时机 IV](../problem/p188_买卖股票的最佳时机4.md)
+- [p714-买卖股票的最佳时机含手续费](../problem/p714_买卖股票的最佳时机含手续费.md)
+- [p309-最佳买卖股票时机含冷冻期](../problem/p309_最佳买卖股票时机含冷冻期.md)
