--- a/problem/p300_最长上升子序列.md
+++ b/problem/p300_最长上升子序列.md
@@ -1,4 +1,4 @@
-# p300-最长上升子序列
+# p300_最长上升子序列
 ## 题目来源
 https://leetcode-cn.com/problems/longest-increasing-subsequence/
 ## 题目描述
@@ -143,5 +143,5 @@ public:
 
 ## 其他补充
 子序列相关问题：
-- [p53-最大子序和](../problem/p53-maximum-subarray.md)
-- [p300-最长上升子序列](../problem/p300-longest-increasing-subsequence.md)
+- [p53-最大子序和](../problem/p53_最大子序和.md)
+- [p300-最长上升子序列](../problem/p300_最长上升子序列.md)
