--- a/problem/p740_删除与获得点数.md
+++ b/problem/p740_删除与获得点数.md
@@ -40,12 +40,12 @@ https://leetcode-cn.com/problems/delete-and-earn/
 
 ## 解题思路
 
-一开始没想到是[打家劫舍](p198-house-robber.md)的变种，然后想通过贪心算法来解决，但实现起来略繁琐。
+一开始没想到是[打家劫舍](p198_打家劫舍.md)的变种，然后想通过贪心算法来解决，但实现起来略繁琐。
 
 后来想了下，将nums[i]的取值范围[1,10000]较小，可以考虑把nums数组哈希到一个新的数组dp上，然后dp[i]的值表示数字i被删除后能够得到的点数总和。
 
 
-经过转换后，这个问题就变成了和[打家劫舍](p198-house-robber.md)类似的问题。
+经过转换后，这个问题就变成了和[打家劫舍](p198_打家劫舍.md)类似的问题。
 
 得到代码如下：
 
