--- a/problem/p91_解码方法.md
+++ b/problem/p91_解码方法.md
@@ -1,4 +1,4 @@
-# p91-解码方法
+# p91_解码方法
 ## 题目来源
 
 https://leetcode-cn.com/problems/decode-ways/
@@ -31,10 +31,22 @@ https://leetcode-cn.com/problems/decode-ways/
 解释: 它可以解码为 "BZ" (2 26), "VF" (22 6), 或者 "BBF" (2 2 6) 。
 ```
 
+
+
+
+
+
+
+
+
+## 题目难度
+> ★★★★
+
 ## 核心知识
 动态规划
 
 ## 解题思路
+题目不难，状态转移方程要好好思考才能写对
 
 ```
 边界条件:
