--- a/problem/p98_验证二叉搜索树.md
+++ b/problem/p98_验证二叉搜索树.md
@@ -31,12 +31,20 @@
 解释: 输入为: [5,1,4,null,null,3,6]。
      根节点的值为 5 ，但是其右子节点值为 4 。
  ```
- Related Topics 树 深度优先搜索 递归 
+
+
  👍 949 👎 0
+
+
+
+
+
+
+ 
 ## 题目难度
 > ★★★★
 ## 核心知识
-树、深度优先搜索、递归、中序遍历
+二叉搜索树、深度优先搜索、递归、中序遍历
 ## 解题思路
 
 ### 递归
