--- a/problem/p53_最大子序和.md
+++ b/problem/p53_最大子序和.md
@@ -1,4 +1,4 @@
-# p53-最大子序和
+# p53_最大子序和
 ## 题目来源
 https://leetcode-cn.com/problems/maximum-subarray/
 ## 题目描述
@@ -13,6 +13,20 @@ https://leetcode-cn.com/problems/maximum-subarray/
 进阶:
 
 如果你已经实现复杂度为 O(n) 的解法，尝试使用更为精妙的分治法求解。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 题目难度
 > ★★★★★
@@ -137,5 +151,5 @@ $$
 
 
 子序列相关问题：
-- [p53-最大子序和](../problem/p53-maximum-subarray.md)
-- [p300-最长上升子序列](../problem/p300-longest-increasing-subsequence.md)
+- [p53-最大子序和](../problem/p53_最大子序和.md)
+- [p300-最长上升子序列](../problem/p300_最长上升子序列.md)
