--- a/分类题目/按类型划分.md
+++ b/分类题目/按类型划分.md
@@ -1,21 +1,21 @@
 # 按类型划分
 
 子序列相关问题：
-- [p53-最大子序和](../problem/p53-maximum-subarray.md)
-- [p300-最长上升子序列](../problem/p300-longest-increasing-subsequence.md)
+- [p53-最大子序和](../problem/p53_最大子序和)
+- [p300-最长上升子序列](../problem/p300_最长上升子序列.md)
 
 
 股票买卖类型题目：
-- [p121-买卖股票的最佳时机](../problem/p121-best-time-to-buy-and-sell-stock.md)
-- [p122--买卖股票的最佳时机 II](../problem/p122-best-time-to-buy-and-sell-stock-ii.md)
-- [p123-买卖股票的最佳时机 III](../problem/p123-best-time-to-buy-and-sell-stock-iii.md)
-- [p188-买卖股票的最佳时机 IV](../problem/p188-best-time-to-buy-and-sell-stock-iv.md)
-- [p714-买卖股票的最佳时机含手续费](../problem/p714-best-time-to-buy-and-sell-stock-with-transaction-fee.md)
-- [p309-最佳买卖股票时机含冷冻期](../problem/p309_best-time-to-buy-and-sell-stock-with-cooldown.md)
+- [p121-买卖股票的最佳时机](../problem/p121_买卖股票的最佳时机.md)
+- [p122--买卖股票的最佳时机 II](../problem/p122_买卖股票的最佳时机2.md)
+- [p123-买卖股票的最佳时机 III](../problem/p123_买卖股票的最佳时机3.md)
+- [p188-买卖股票的最佳时机 IV](../problem/p188_买卖股票的最佳时机4.md)
+- [p714-买卖股票的最佳时机含手续费](../problem/p714_买卖股票的最佳时机含手续费.md)
+- [p309-最佳买卖股票时机含冷冻期](../problem/p309_最佳买卖股票时机含冷冻期.md)
 
 
 打家劫舍类型题目：
-- [p198_打家劫舍](../problem/p198-house-robber.md)
+- [p198_打家劫舍](../problem/p198_打家劫舍.md)
 - [p740_删除与获得点数](../problem/p740_删除与获得点数.md)
 
 石子游戏类型题目：
