--- a/problem/p123_买卖股票的最佳时机3.md
+++ b/problem/p123_买卖股票的最佳时机3.md
@@ -36,6 +36,20 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/
 解释: 在这个情况下, 没有交易完成, 所以最大利润为 0。
 ```
 
+ 提示： 
+
+```
+ 1 <= prices.length <= 105 
+ 0 <= prices[i] <= 105 
+```
+
+
+
+
+
+
+
+
 ## 核心知识
 
 动态规划
