--- a/problem/p25_k个一组反转链表.md
+++ b/problem/p25_k个一组反转链表.md
@@ -108,4 +108,107 @@ public ListNode reverseKGroup(ListNode head, int k) {
 
 官方题解的空间复杂度更低，但是思路相对绕。
 
+下边用go语言做了一次：
+
+```go
+/**
+ * Definition for singly-linked list.
+ * type ListNode struct {
+ *     Val int
+ *     Next *ListNode
+ * }
+ */
+func reverseKGroup(head *ListNode, k int) *ListNode {
+    cache := make([]*ListNode, k)
+
+    newHead := &ListNode{}
+    newTail := newHead
+
+    for head != nil {
+        count := 0
+        for i := 0; i < k && head != nil; i++ {
+            cache[i] = head
+            head = head.Next
+            count++
+        }
+
+        if count == k {
+            for count > 0 {
+                newTail.Next = cache[count - 1]
+                newTail = newTail.Next
+                count--
+            }
+        } else {
+            newTail.Next = cache[0]
+            newTail = cache[count - 1]
+        }
+    }
+    // 尾节点需要清空引用，以免出现循环的情况
+    newTail.Next = nil
+    return newHead.Next
+}
+
+```
+空间复杂度更低的做法：
+
+```go
+/**
+ * Definition for singly-linked list.
+ * type ListNode struct {
+ *     Val int
+ *     Next *ListNode
+ * }
+ */
+func reverseKGroup(head *ListNode, k int) *ListNode {
+    newHead := &ListNode{Next:head}
+    // 需要记录前一个节点以便接回反转后的K链表
+    pre := newHead
+    currentNode := head
+    // 遍历直到当前指针到达尾部nil
+    for currentNode != nil {
+        // 尾节点从前一个节点出发，向后寻找k个节点
+        tail := pre
+        for i:=0; i < k ;i++ {
+            tail = tail.Next
+            // 当尾节点已经到达链表尾部，则可以直接返回了，不用再反转
+            if tail == nil {
+                return newHead.Next
+            }
+        }
+        // 此时应当反转 currentNode到tail之间的节点
+        // 反转之前先记录K链表后的节点，以便后文接回来
+        next := tail.Next
+        // 清空tail后的节点，避免循环，并且问题退化为普通的反转链表，并返回新的头结点
+        tail.Next = nil
+        // 反转后的K链表被接到前一个节点的next
+        pre.Next = reverse(currentNode)
+        // 此时的currentNode是反转后的K链表的最后一个节点，刚好接回上文的next
+        currentNode.Next = next
+        // 此处更新pre，并且移动currentNode向下一个节点
+        pre = currentNode
+        currentNode = next
+    }
+    return newHead.Next
+
+}
+
+func reverse(head *ListNode) (*ListNode){
+    // 初始化前一个节点为nil
+    var pre *ListNode = nil
+    current := head
+    for current != nil {
+        // 先记录下一个节点
+        next := current.Next
+        // 当前节点的next接到前一个节点
+        current.Next = pre
+        // 移动pre和current指针
+        pre = current
+        current = next
+    }
+
+    return pre
+}
+
+```
+
 ## 其他补充
