--- a/problem/p5_最长回文子串.md
+++ b/problem/p5_最长回文子串.md
@@ -18,25 +18,6 @@
 著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ## 题目难度
 > ★★★
 ## 核心知识
@@ -144,6 +125,86 @@ public String longestPalindrome(String s) {
     }
 
     return longestString;
+}
+
+```
+
+```go
+func longestPalindrome(s string) string {
+	strLen := len(s)
+    max := 0
+    longest := ""
+    f := make([][]bool, strLen)
+    for i := 0; i < strLen; i++ {
+        f[i] = make([]bool, strLen)
+    }
+
+    for long := 1; long <= strLen; long ++ {
+        for i := 0; i < strLen; i++ {
+            j := i + long - 1
+            if j >= strLen {
+                break
+            }
+
+            if long == 1 {
+                f[i][j] = true
+            }
+
+            if long == 2 && s[i] == s[j]{
+                f[i][j] = true
+            } 
+
+            if long > 2 && s[i] == s[j] && f[i+1][j-1] {
+                f[i][j] = true
+            }
+
+            if f[i][j] && long > max {
+                longest = s[i:j+1]
+                max = long
+            }
+        }
+    }
+    
+    return longest
+}
+
+// 还有个搓一点的写法
+func longestPalindrome(s string) string {
+    if strLen <= 1 {
+		return s
+	}
+
+	f := make([][]bool, strLen)
+	for i := 0; i < strLen; i++ {
+		f[i] = make([]bool, strLen)
+		f[i][i] = true
+		if i < strLen-1 && s[i] == s[i+1] {
+			f[i][i+1] = true
+		}
+	}
+
+	for size := 3; size <= strLen; size++ {
+		for index := 0; index < strLen; index++ {
+			if index+size > strLen {
+				break
+			}
+
+			f[index][index+size-1] = (s[index] == s[index+size-1]) && f[index+1][index+size-2]
+		}
+	}
+
+	max := 1
+	longest := s[0:1]
+	for i := 0; i < strLen-1; i++ {
+		for j := i + 1; j < strLen; j++ {
+			if f[i][j] && j-i+1 > max {
+				longest = s[i : j+1]
+				max = j - i + 1
+			}
+		}
+	}
+
+	return longest
 }
 
 ```
