--- a/problem/p20_有效的括号.md
+++ b/problem/p20_有效的括号.md
@@ -82,4 +82,26 @@ public boolean isValid(String s) {
 }
 ```
 
+还是go语言的实现简洁
+
+```go 
+func isValid(s string) bool {
+    m := map[byte]byte {
+        ')':'(',
+        ']':'[',
+        '}':'{',
+    }
+
+    stack := []byte{}
+    for _, c := range []byte(s) {
+        if len(stack) > 0 && stack[len(stack)-1] == m[c] {
+            stack = stack[:len(stack) - 1]
+        } else {
+            stack = append(stack, c)
+        }
+    }
+
+    return len(stack) == 0
+}
+```
 ## 其他补充
