--- a/problem/p3_无重复字符的最长子串.md
+++ b/problem/p3_无重复字符的最长子串.md
@@ -32,7 +32,7 @@ s 由英文字母、数字、符号和空格组成
 滑动窗口
 ## 解题思路
 
-以下解法没有采用左右指针，而是使用开辟新空间的方式：
+以下解法没有采用左右指针，而是使用开辟一个新空间来保存子串的方式：
 ```go
 func lengthOfLongestSubstring(s string) int {
     subSet := make(map[rune]string, len(s))
@@ -69,15 +69,44 @@ func lengthOfLongestSubstring(s string) int {
 
 ```
 
-以下为更节省空间的左右指针解法：
+其实不用新空间来保存子串也可以实现：
+```go
+func lengthOfLongestSubstring(s string) int {
+    existMap := make(map[byte]int, len(s))
+    maxLen := 0
+
+    for index, ch := range []byte(s) {
+        if i, ok := existMap[ch]; !ok {
+            existMap[ch] = index
+        } else {
+            // 直接通过哈希表大小计算待删除的子串范围，然后从哈希表中删除这些元素
+            lastIndex := i 
+            currentCount := len(existMap)
+            for j := index - currentCount; j <= lastIndex; j++ {
+                delete(existMap, s[j])
+            }
+            existMap[ch] = index
+        }
+
+        maxLen = max(maxLen, len(existMap))
+    }
+
+    return maxLen
+}
+
+```
+
+上边的写法还不够优雅，下边的写法思路一致，但更加精炼：
 ```go
 func lengthOfLongestSubstring(s string) int {
     subSet := make(map[byte]int, len(s))
     maxLen := 0
     left := 0
-
+    // 右指针不断递增
     for right := 0; right < len(s); right++ {
+        // 递增的右字符放入哈希表
         subSet[s[right]]++
+        // 当新来的右字符已经重复，则不断移动左指针，直到右字符不再重复
         for subSet[s[right]] > 1 {
             subSet[s[left]]--
             left++
