--- a/problem/p15_三数之和.md
+++ b/problem/p15_三数之和.md
@@ -86,4 +86,45 @@ public List<List<Integer>> threeSum(int[] nums) {
 }
 
 ```
+
+```go
+
+func threeSum(nums []int) [][]int {
+	result := make([][]int, 0, len(nums))
+    // 先将数字整理为有序
+	sort.SliceStable(nums, func(i,j int) bool {
+		return nums[i] < nums[j]
+	})
+    // 遍历第一个数字
+	for first := 0; first < len(nums) - 2; first++ {
+        // 确保每次遍历都是递增的数字，避免出现重复元组
+		if first > 0 && nums[first] == nums[first-1] {
+			continue
+		}
+        // 左右指针从两边逼近
+		left := 0 - nums[first]
+		third := len(nums) - 1
+		for second := first + 1; second < len(nums) - 1; second++ {
+            // 同时也要确保第二个数字是递增的
+			if second > first+1 && nums[second] == nums[second-1] {
+				continue
+			}
+            // 递降右指针直到边界
+			for nums[third] + nums[second] > left && second < third {
+				third--
+			}
+			// 越界退出
+			if second >= third {
+				break
+			}
+            // 找到符合条件的三元组保存下来
+			if nums[third] + nums[second] == left {
+				result = append(result, []int{nums[first], nums[second], nums[third]})
+			}
+		}
+	}
+	return result
+}
+
+```
 ## 其他补充
