--- a/problem/p1_两数之和.md
+++ b/problem/p1_两数之和.md
@@ -41,11 +41,6 @@
  只会存在一个有效答案 
  ```
 
-
-
-
-
-
  
 ## 题目难度
 > ★★★
@@ -69,5 +64,22 @@ public int[] twoSum(int[] nums, int target) {
 
     return null;
 }
+```
+
+```go
+func twoSum(nums []int, target int) []int {
+    numMap := make(map[int]int, len(nums))
+    for index, num := range nums {
+        another := target - num 
+        if anotherIndex, ok := numMap[another]; ok {
+            return []int{index, anotherIndex}
+        } else {
+            numMap[num] = index
+        }
+    }
+
+    return nil
+}
+
 ```
 ## 其他补充
