--- a/problem/p121_买卖股票的最佳时机.md
+++ b/problem/p121_买卖股票的最佳时机.md
@@ -24,12 +24,6 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/
 ```
 
 
-
-
-
-
-
-
 ## 核心知识
 贪心、dp
 ## 解题思路
@@ -46,6 +40,25 @@ public int maxProfit(int[] prices) {
 
     return maxProfit;
 }
+```
+
+
+```go
+func maxProfit(prices []int) int {
+    if len(prices) == 0 {
+        return 0
+    }
+
+    minPrice := math.MaxInt
+    maxProfit := 0
+    for _, p := range prices {
+        maxProfit = max(maxProfit, p - minPrice)
+        minPrice = min(p, minPrice)
+    }
+
+    return maxProfit
+}
+
 ```
 
 ## 其他补充
