--- a/problem/p123_买卖股票的最佳时机3.md
+++ b/problem/p123_买卖股票的最佳时机3.md
@@ -44,12 +44,6 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/
 ```
 
 
-
-
-
-
-
-
 ## 核心知识
 
 动态规划
@@ -63,7 +57,7 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/
 - 状态转移方程：
 ```java
     dp[i][k][0] = Integer.max(dp[i - 1][k][0], dp[i - 1][k][1] + prices[i]);
-    dp[i][k][1] = Integer.max(dp[i - 1][k - 1][0] - prices[i], dp[i - 1][k][1]);
+    dp[i][k][1] = Integer.max(dp[i - 1][k][1], dp[i - 1][k - 1][0] - prices[i]);
 ```
 第一维的i表示第i天(0 <= i < n)；
 第二维的k表示买了k次（0 <= k <= 2)；
@@ -182,6 +176,31 @@ $$
 
         return Integer.max(p20, p10);
     }
+
+```
+
+使用go重做了一遍
+
+```go
+func maxProfit(prices []int) int {
+    if len(prices) <= 1 {
+        return 0
+    }
+    b0 := 0
+    b1 := -prices[0]
+    s1 := 0
+    b2 := -prices[0]
+    s2 := 0
+
+    for i := 1; i < len(prices); i++ {
+        s2 = max(s2, b2 + prices[i])
+        b2 = max(b2, s1 - prices[i])
+        s1 = max(s1, b1 + prices[i])
+        b1 = max(b1, b0 - prices[i])
+    }
+
+    return max(0, max(s1, s2))
+}
 
 ```
 
