--- a/problem/p124_二叉树中的最大路径和.md
+++ b/problem/p124_二叉树中的最大路径和.md
@@ -104,4 +104,27 @@ public int findPathSum(TreeNode root) {
 
 ```
 
+```go
+var maxNum = math.MinInt
+
+func trace(root *TreeNode) int {
+    if root == nil  {
+        return 0
+    }
+    
+    leftValue := max(trace(root.Left), 0)
+    rightValue := max(trace(root.Right) , 0)
+    maxNum = max(maxNum, root.Val + leftValue + rightValue)
+
+    return root.Val + max(leftValue, rightValue)
+}
+
+func maxPathSum(root *TreeNode) int {
+    maxNum = math.MinInt
+    trace(root)
+    return maxNum
+}
+
+```
+
 ## 其他补充
