--- a/problem/p122_买卖股票的最佳时机2.md
+++ b/problem/p122_买卖股票的最佳时机2.md
@@ -42,12 +42,6 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/
 ```
 
 
-
-
-
-
-
-
 ## 核心知识
 峰谷法
 ## 解题思路
@@ -72,6 +66,53 @@ https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/
 
         return maxProfit;
     }
+
+```
+
+```go
+func maxProfit(prices []int) int {
+    sum := 0
+    for i := 1; i < len(prices); i++ {
+        sum += max(0, prices[i]- prices[i-1])
+    }
+
+    return sum
+}
+```
+
+也可以用动态规划，第i天可以持仓或者空仓，分别用dp[i][1]和dp[i][0]表示，则有动态转移方程为：
+
+$$
+\begin{cases}
+dp[i][1] = max(dp[i-1][1], dp[i-1][0] - prices[i])\\\\
+dp[i][0] = max(dp[i-1][0], dp[i-1][1] + prices[i]) \\\\
+dp[0][0] = 0\\\\
+dp[0][1] = -prices[0]
+\end{cases}
+$$
+
+代码如下：
+```go
+func maxProfit(prices []int) int {
+    if len(prices) == 0 {
+        return 0
+    }
+
+    dp := make([][]int, len(prices))
+    for index := range dp {
+        dp[index] = make([]int, 2)
+    }
+
+    dp[0][0] = 0
+    dp[0][1] = -prices[0]
+    for i := 1; i < len(prices); i++ {
+        dp[i][0] = max(dp[i-1][0], dp[i-1][1]+prices[i])
+        dp[i][1] = max(dp[i-1][1], dp[i-1][0]-prices[i])
+    }
+
+    return max(dp[len(prices)-1][0], dp[len(prices)-1][1])
+}
+
 
 ```
 ## 其他补充
