--- a/problem/p198_打家劫舍.md
+++ b/problem/p198_打家劫舍.md
@@ -68,7 +68,7 @@ $$
 ```
 
 ## 带空间压缩的二维DP
-显然上边的状态转移方程已用到了 *dp[i-1][0]* 和 *dp[i-1][1]* 下标，所以可以进行空间压缩：
+显然上边的状态转移方程只用到了 *dp[i-1][0]* 和 *dp[i-1][1]* 下标，所以可以进行空间压缩：
 
 ```java
 
@@ -124,6 +124,28 @@ $$
         }
         return sub;
     }
+```
+
+```go
+func rob(nums []int) int {
+    if len(nums) == 0 {
+        return 0
+    }
+    dp := make([]int, len(nums))
+    for index := 0;index < len(nums);index++ {
+        r1 := 0
+        r2 := 0
+        if index - 1 >= 0 {
+            r1 = dp[index-1]
+        }
+        if index - 2 >= 0 {
+            r2 = dp[index-2]
+        }
+        dp[index] = max(r1, r2 + nums[index])
+    }
+    return dp[len(nums) - 1]
+}
+
 ```
 
 ## 其他补充
