--- a/problem/p4_寻找两个正序数组的中位数.md
+++ b/problem/p4_寻找两个正序数组的中位数.md
@@ -7,26 +7,27 @@
 
 
 示例 1：
-
+```
 输入：nums1 = [1,3], nums2 = [2]
 输出：2.00000
 解释：合并数组 = [1,2,3] ，中位数 2
+```
 示例 2：
-
+```
 输入：nums1 = [1,2], nums2 = [3,4]
 输出：2.50000
 解释：合并数组 = [1,2,3,4] ，中位数 (2 + 3) / 2 = 2.5
- 
+ ```
 
 提示：
-
+```
 nums1.length == m
 nums2.length == n
 0 <= m <= 1000
 0 <= n <= 1000
 1 <= m + n <= 2000
 -10^6 <= nums1[i], nums2[i] <= 10^6
-
+```
 ## 题目难度
 > ★★★★★
 ## 核心知识
@@ -34,7 +35,9 @@ nums2.length == n
 
 ## 解题思路
 
-题目难点在于要实现 O(log (m+n))以内的时间复杂度
+题目难点在于要实现 O(log (m+n))以内的时间复杂度，那肯定是要用到二分的。
+
+想象两个数组各有一个隔板。
 
 ```go
 
@@ -51,7 +54,7 @@ func findMedianSortedArrays(nums1 []int, nums2 []int) float64 {
     left := 0
     right := m
 
-    for left < right {
+    for left < right {  // 二分找到nums1数组的中间隔板i
         i := left + (right - left + 1) / 2
         j := leftTotal - i 
         if nums1[i-1] < nums2[j] {
